# project-management-app

./: .gitignore  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  Dockerfile.dev  entrypoint.sh  pyproject.toml  requirements.txt
backend/apps/api/: routers.py  urls.py
backend/apps/core/: profiling.py  swagger_utils.py  tasks.py
backend/apps/customer/: filters.py  models.py  serilaizers.py  views.py
backend/apps/customer/migrations/: 0001_initial.py
backend/apps/users/: admin.py  auth_views.py  models.py  serializers.py  views.py
backend/apps/users/migrations/: 0001_initial.py  0002_auto_20190111_1500.py
backend/config/: celery.py  urls.py
backend/config/settings/: base.py  dev.py  prod.py  stage.py
backend/templates/users/: password_reset_body.txt
docker/nginx/: nginx.conf
env_files/: .env.template
